Registered Identity Samples, Implements Identity addons

--- a/StoreFront.UI.MVC/appsettings.json
+++ b/StoreFront.UI.MVC/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-StoreFront.UI.MVC-dc02c8ae-ac50-46c4-a33f-2a8a08125498;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=.\\sqlexpress;Database=StoreFront;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
