--- a/StoreFront.UI.MVC/StoreFront.UI.MVC.csproj
+++ b/StoreFront.UI.MVC/StoreFront.UI.MVC.csproj
@@ -20,6 +20,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="wwwroot\images\" />
     <Folder Include="wwwroot\OriginalWebRoot\" />
     <Folder Include="wwwroot\_Archive\" />
   </ItemGroup>
