untracked appsettings.json

--- a/StoreFront.UI.MVC/appsettings.json
+++ b/StoreFront.UI.MVC/appsettings.json
@@ -8,5 +8,18 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+
+  "Credentials": {
+    "Email": {
+      "Client": "mail.alex-davenport.com",
+
+      "User": "noreply@alex-davenport.com",
+
+      "Password": "Ad1034400!",
+
+      "Recipient": "alexd8052@gmail.com"
+    }
+  },
+
   "AllowedHosts": "*"
 }
